--- a/10234/index.html
+++ b/10234/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Allure Report</title>
-    <link rel="favicon" href="favicon.ico">
+    <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link rel="stylesheet" type="text/css" href="plugin/screen-diff/styles.css">
 </head>
@@ -26,7 +26,7 @@
         gtag('js', new Date());
         gtag('config', 'G-FVWC4GKEYS', {
           'allureVersion': 'dev',
-          'reportUuid': '7d938057-a1f8-425c-8c47-c884d6c0c02d',
+          'reportUuid': '7af644c4-3d3d-4d61-b4c5-7485eb6e8867',
           'single_file': false
         });
     </script>
