deploy: e9f8015a1959485c6444d87363c8615aa97ac43a

--- a/10233/index.html
+++ b/10233/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Allure Report</title>
-    <link rel="favicon" href="favicon.ico">
+    <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link rel="stylesheet" type="text/css" href="plugin/screen-diff/styles.css">
 </head>
@@ -26,7 +26,7 @@
         gtag('js', new Date());
         gtag('config', 'G-FVWC4GKEYS', {
           'allureVersion': 'dev',
-          'reportUuid': '6f081775-abe4-40cb-9a26-cc22ff90315e',
+          'reportUuid': 'ce20c7c8-ac1e-4666-873a-826e994e369b',
           'single_file': false
         });
     </script>
