--- a/10236/index.html
+++ b/10236/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Allure Report</title>
-    <link rel="favicon" href="favicon.ico">
+    <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link rel="stylesheet" type="text/css" href="plugin/screen-diff/styles.css">
 </head>
@@ -26,7 +26,7 @@
         gtag('js', new Date());
         gtag('config', 'G-FVWC4GKEYS', {
           'allureVersion': 'dev',
-          'reportUuid': '4ec93cc3-1ba0-4e34-a75a-ca1f530eb59e',
+          'reportUuid': '7119003e-0924-4fa4-bc40-604ff4f8a830',
           'single_file': false
         });
     </script>
