deploy: e9f8015a1959485c6444d87363c8615aa97ac43a

--- a/10237/index.html
+++ b/10237/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Allure Report</title>
-    <link rel="favicon" href="favicon.ico">
+    <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link rel="stylesheet" type="text/css" href="plugin/screen-diff/styles.css">
 </head>
@@ -26,7 +26,7 @@
         gtag('js', new Date());
         gtag('config', 'G-FVWC4GKEYS', {
           'allureVersion': 'dev',
-          'reportUuid': 'cb456635-9a03-4c93-965c-65781289193c',
+          'reportUuid': 'ffc84b00-d847-47dd-99ae-75d1925c4cbb',
           'single_file': false
         });
     </script>
