deploy: e9f8015a1959485c6444d87363c8615aa97ac43a

--- a/10238/index.html
+++ b/10238/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Allure Report</title>
-    <link rel="favicon" href="favicon.ico">
+    <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link rel="stylesheet" type="text/css" href="plugin/screen-diff/styles.css">
 </head>
@@ -26,7 +26,7 @@
         gtag('js', new Date());
         gtag('config', 'G-FVWC4GKEYS', {
           'allureVersion': 'dev',
-          'reportUuid': '620f5af2-9e8f-4947-ad59-856cf57d7c78',
+          'reportUuid': '23e089cd-62fe-4056-8b20-7fec83a939eb',
           'single_file': false
         });
     </script>
