deploy: e9f8015a1959485c6444d87363c8615aa97ac43a

--- a/10239/index.html
+++ b/10239/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Allure Report</title>
-    <link rel="favicon" href="favicon.ico">
+    <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link rel="stylesheet" type="text/css" href="plugin/screen-diff/styles.css">
 </head>
@@ -26,7 +26,7 @@
         gtag('js', new Date());
         gtag('config', 'G-FVWC4GKEYS', {
           'allureVersion': 'dev',
-          'reportUuid': 'e31f4a7e-60c0-45b6-ac13-95b00a88fc46',
+          'reportUuid': '88f8eb72-8d4f-4e8f-bdb6-a0bd097f0dce',
           'single_file': false
         });
     </script>
