--- a/10240/index.html
+++ b/10240/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Allure Report</title>
-    <link rel="favicon" href="favicon.ico">
+    <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link rel="stylesheet" type="text/css" href="plugin/screen-diff/styles.css">
 </head>
@@ -26,7 +26,7 @@
         gtag('js', new Date());
         gtag('config', 'G-FVWC4GKEYS', {
           'allureVersion': 'dev',
-          'reportUuid': '47e831d0-0687-470f-964a-70dcf23c795f',
+          'reportUuid': 'b0823509-c4a4-4d06-af8d-7ac75b5077f9',
           'single_file': false
         });
     </script>
