deploy: e9f8015a1959485c6444d87363c8615aa97ac43a

--- a/10241/index.html
+++ b/10241/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Allure Report</title>
-    <link rel="favicon" href="favicon.ico">
+    <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link rel="stylesheet" type="text/css" href="plugin/screen-diff/styles.css">
 </head>
@@ -26,7 +26,7 @@
         gtag('js', new Date());
         gtag('config', 'G-FVWC4GKEYS', {
           'allureVersion': 'dev',
-          'reportUuid': 'f7b71dc6-f53c-4f63-ade7-c5fea4d801f8',
+          'reportUuid': '05e57ff6-8698-4cdc-98f8-dc7640e23dc2',
           'single_file': false
         });
     </script>
