--- a/10242/index.html
+++ b/10242/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Allure Report</title>
-    <link rel="favicon" href="favicon.ico">
+    <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link rel="stylesheet" type="text/css" href="plugin/screen-diff/styles.css">
 </head>
@@ -26,7 +26,7 @@
         gtag('js', new Date());
         gtag('config', 'G-FVWC4GKEYS', {
           'allureVersion': 'dev',
-          'reportUuid': '21680706-bd6f-4cc8-83c0-9a8197a0d5ee',
+          'reportUuid': 'f3c3e9d1-616c-4967-85a0-67d18287c3ad',
           'single_file': false
         });
     </script>
