deploy: e9f8015a1959485c6444d87363c8615aa97ac43a

--- a/10243/index.html
+++ b/10243/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Allure Report</title>
-    <link rel="favicon" href="favicon.ico">
+    <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link rel="stylesheet" type="text/css" href="plugin/screen-diff/styles.css">
 </head>
@@ -26,7 +26,7 @@
         gtag('js', new Date());
         gtag('config', 'G-FVWC4GKEYS', {
           'allureVersion': 'dev',
-          'reportUuid': 'a52c5eea-843e-4eed-adfe-3585f38f5647',
+          'reportUuid': 'cf0bb544-6aee-4cd3-b1a9-fedabe2495a4',
           'single_file': false
         });
     </script>
