deploy: e9f8015a1959485c6444d87363c8615aa97ac43a

--- a/10245/index.html
+++ b/10245/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Allure Report</title>
-    <link rel="favicon" href="favicon.ico">
+    <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link rel="stylesheet" type="text/css" href="plugin/screen-diff/styles.css">
 </head>
@@ -26,7 +26,7 @@
         gtag('js', new Date());
         gtag('config', 'G-FVWC4GKEYS', {
           'allureVersion': 'dev',
-          'reportUuid': 'f3931389-0f46-4422-be8b-27af3d7ee9f0',
+          'reportUuid': '72748038-c24b-480c-8105-ae958699856f',
           'single_file': false
         });
     </script>
