deploy: e9f8015a1959485c6444d87363c8615aa97ac43a

--- a/10246/index.html
+++ b/10246/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Allure Report</title>
-    <link rel="favicon" href="favicon.ico">
+    <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link rel="stylesheet" type="text/css" href="plugin/screen-diff/styles.css">
 </head>
@@ -26,7 +26,7 @@
         gtag('js', new Date());
         gtag('config', 'G-FVWC4GKEYS', {
           'allureVersion': 'dev',
-          'reportUuid': '7d31b319-884c-4ac8-853d-0105d004474b',
+          'reportUuid': '289cf8f8-b471-4e01-9172-4a7133b0f73f',
           'single_file': false
         });
     </script>
