deploy: e9f8015a1959485c6444d87363c8615aa97ac43a

--- a/10248/index.html
+++ b/10248/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Allure Report</title>
-    <link rel="favicon" href="favicon.ico">
+    <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link rel="stylesheet" type="text/css" href="plugin/screen-diff/styles.css">
 </head>
@@ -26,7 +26,7 @@
         gtag('js', new Date());
         gtag('config', 'G-FVWC4GKEYS', {
           'allureVersion': 'dev',
-          'reportUuid': 'e886d26d-baa9-43aa-acf2-8d7332e9ce0b',
+          'reportUuid': '017fd708-446c-41c6-b449-ae5587a31dfb',
           'single_file': false
         });
     </script>
