deploy: e9f8015a1959485c6444d87363c8615aa97ac43a

--- a/10249/index.html
+++ b/10249/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Allure Report</title>
-    <link rel="favicon" href="favicon.ico">
+    <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link rel="stylesheet" type="text/css" href="plugin/screen-diff/styles.css">
 </head>
@@ -26,7 +26,7 @@
         gtag('js', new Date());
         gtag('config', 'G-FVWC4GKEYS', {
           'allureVersion': 'dev',
-          'reportUuid': 'b70e8997-2b7c-4909-b3ad-8119222f357b',
+          'reportUuid': 'f6a0718b-de8b-4b77-935e-84bf077f5f9f',
           'single_file': false
         });
     </script>
