--- a/10250/index.html
+++ b/10250/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Allure Report</title>
-    <link rel="favicon" href="favicon.ico">
+    <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link rel="stylesheet" type="text/css" href="plugin/screen-diff/styles.css">
 </head>
@@ -26,7 +26,7 @@
         gtag('js', new Date());
         gtag('config', 'G-FVWC4GKEYS', {
           'allureVersion': 'dev',
-          'reportUuid': '9346d46e-6a66-4cf4-a794-f4d9b0664311',
+          'reportUuid': '395f594e-dd53-4ca1-b0f4-761f9db0d83b',
           'single_file': false
         });
     </script>
