deploy: e9f8015a1959485c6444d87363c8615aa97ac43a

--- a/10252/index.html
+++ b/10252/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Allure Report</title>
-    <link rel="favicon" href="favicon.ico">
+    <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link rel="stylesheet" type="text/css" href="plugin/screen-diff/styles.css">
 </head>
@@ -26,7 +26,7 @@
         gtag('js', new Date());
         gtag('config', 'G-FVWC4GKEYS', {
           'allureVersion': 'dev',
-          'reportUuid': 'b7f7e0b6-b0c4-44d1-8d16-38e8218ca667',
+          'reportUuid': '37005ebd-7c09-4948-a969-1d6ca028f48d',
           'single_file': false
         });
     </script>
